--- a/HacoCmsClient/build.gradle
+++ b/HacoCmsClient/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'org.jetbrains.kotlin.jvm'
+    id 'maven-publish'
 }
 
 java {
@@ -26,4 +27,41 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.hacocms.sdk'
+            artifactId = 'hacocms'
+            version = "1.0.0"
+            from components.java
+
+            pom {
+                name = 'hacoCMS JVM SDK'
+                description = 'hacoCMSのjava/kotlin用 API クライアントライブラリです。'
+                url = 'https://github.com/hacocms/hacocms-jvm-sdk'
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'http://www.opensource.org/licenses/mit-license.php'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'quangson91'
+                        name = 'Duong Quang Son'
+                        email = 'quangson91@gmail.com'
+                    }
+                }
+
+                scm {
+                    connection = 'scm:git:git://hacocms/hacocms-jvm-sdk.git'
+                    developerConnection = 'scm:git:ssh://hacocms/hacocms-jvm-sdk.git'
+                    url = 'https://github.com/hacocms/hacocms-jvm-sdk/'
+                }
+            }
+        }
+    }
 }
